# 60-Day-Daily-Commitment-Tracker

./: .gitignore  DailyCommitmentTracker.command  LICENSE  README.md  pyproject.toml
core/main/: main.py
core/resources/: config.json
