[project]
name = "60-Day-Daily-Commitment-Tracker"
version = "1.2.1"
description = "A locally-hosted web-app for tracking daily commitments over a 60-day period."
requires-python = ">=3.9"
dependencies = ["flask>=3.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project.scripts]
tracker = "main.main:app"

[tool.setuptools.packages.find]
where = ["src"]
